E2E-520: Get offender appointments (#460)
* E2E-520: Get offender appointments

* set query parameters as optional